# cleardeck-multichain

./: .env.example  .gitignore  AI_HANDOFF.md  CHANGELOG.md  CLAUDE.md  README.md  SECURITY_ASSESSMENT.md  SECURITY_AUDIT.md  canister_ids.json  dfx.json  icp.yaml  package-lock.json
.icp/data/mappings/: ic.ids.json
docs/memory/: feedback_coding_style.md  project_pending_bugs.md
scripts/: deploy-production.sh  verify-build.sh
src/cleardeck_frontend/: package-lock.json  package.json  vite.config.js
src/cleardeck_frontend/src/lib/: auth.js  canisters.js  logger.js  oisy.js
src/cleardeck_frontend/src/lib/components/: Card.svelte  DepositModal.svelte  Fireworks.svelte  HandHistory.svelte  Lobby.svelte  PokerTable.svelte  RainCloud.svelte  WalletButton.svelte  WithdrawModal.svelte
src/cleardeck_frontend/src/routes/: +page.svelte
src/cleardeck_frontend/static/: .ic-assets.json5
src/cleardeck_frontend/static/.well-known/: ii-alternative-origins
src/history_canister/src/: lib.rs
src/lobby_canister/: lobby_canister.did
src/lobby_canister/src/: lib.rs
src/table_canister/: Cargo.toml  table_canister.did
src/table_canister/src/: lib.rs
src/table_canister/tests/: integration_test.rs  unit_tests.rs
tests/: README.md
