[package]
name = "table_canister"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "unit_tests"
path = "tests/unit_tests.rs"

[dev-dependencies]
sha2 = "0.10"

[dependencies]
candid = "0.10"
ic-cdk = "0.19"
ic-cdk-timers = "1"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
crc32fast = "1.3"
icrc-ledger-types = "0.1.12"
num-traits = "0.2"
# ETH deposit: threshold ECDSA + EVM RPC
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
alloy-consensus = { version = "0.9", default-features = false }
alloy-eips = { version = "0.9", default-features = false }
alloy-primitives = { version = "0.8", default-features = false }
alloy-rlp = { version = "0.3", default-features = false }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["custom"] }
evm_rpc_types = "3.1"
